--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">HuddleUp</string>
+    <string name="ready">at Universitas Brawijaya. <b>Are you ready?</b></string>
+    <string name="back">&lt; Back</string>
 </resources>
