--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,8 @@
     <string name="back">&lt; Back</string>
     <string name="profile_picture">Profile picture</string>
     <string name="notification_title">Title</string>
+    <string name="default_web_client_id">601847698528-juqn55ii7hrvsfpjo50ugkrktto9d9p7.apps.googleusercontent.com</string>
+
 
 
 </resources>
