--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">HuddleUp</string>
     <string name="ready">at Universitas Brawijaya. <b>Are you ready?</b></string>
     <string name="back">&lt; Back</string>
+    <string name="nama_kategori">Nama Kategori:</string>
+    <string name="pilih_event_untuk_kategori_ini">Pilih event untuk kategori ini:</string>
 </resources>
